# solana-dex

./: .gitignore  Anchor.toml  README.md
app/: .env.example  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/src/: App.tsx  idl.json  main.tsx  polyfill.ts  solana.ts  styles.css
app/src/components/: CreatePool.tsx  TradePool.tsx
programs/dex/: Cargo.toml
programs/dex/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/dex/src/instructions/: add_liquidity.rs  initialize.rs  remove_liquidity.rs  swap.rs
programs/dex/tests/: test_add_liquidity.rs  test_adversarial.rs  test_initialize.rs  test_remove_liquidity.rs  test_swap.rs
